# coconut-fsw

./: .dockerignore  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  COCONUTFSW.uf2  CoconutDoxyfile  DEADJOE  DOCS.md  Dockerfile  LICENSE  README.md  build.sh  debug.sh  debug_flash.sh  deploy.sh  docker_build.bat  docker_build.sh  docker_deploy.bat  docker_deploy.sh  fuzz.sh  pico_sdk_import.cmake  simbuild.sh
App-Template/: main.c
Config/: FreeRTOSConfig.h
RP2040PIO-DS18B20/src/: DS18B20.c  DS18B20.cpp  DS18B20.h
debug/: 99-pico.rules  ACM0.sh  ACM1.sh  README.md  USB0.sh  buildnflashjtag.sh  ccsds_cmd.py  debug.sh  rp2040.cfg  uart.sh
docker/: .dockerignore  Dockerfile  docker_build.sh
docs/: DOCS.md  DOCS_8md.html  PicoHal_8h.html  PicoHal_8h__dep__incl.dot  PicoHal_8h__dep__incl.map  PicoHal_8h__dep__incl.md5  PicoHal_8h__incl.dot  PicoHal_8h__incl.map  PicoHal_8h__incl.md5  PicoHal_8h_source.html  README_8md.html  _d_o_c_s_8md.html  _pico_hal_8h.html  _pico_hal_8h__dep__incl.map  _pico_hal_8h__incl.map  _pico_hal_8h__incl.md5  _pico_hal_8h_source.html  adc_8h.html  adc_8h__dep__incl.map  adc_8h__dep__incl.md5  adc_8h_source.html  annotated.html  antenna__deploy__job_8c.html  antenna__deploy__job_8c__incl.map  antenna__deploy__job_8c__incl.md5  antenna__deploy__job_8h.html  antenna__deploy__job_8h__dep__incl.map  antenna__deploy__job_8h__dep__incl.md5  antenna__deploy__job_8h_ae3a830973f83e88a3198ecb8e7c5f338_cgraph.map  antenna__deploy__job_8h_ae3a830973f83e88a3198ecb8e7c5f338_cgraph.md5  antenna__deploy__job_8h_source.html  binary__info_8h.html  binary__info_8h__dep__incl.map  binary__info_8h__dep__incl.md5  binary__info_8h_source.html  classPiPicoHal.html  classPiPicoHal__coll__graph.dot  classPiPicoHal__inherit__graph.map  classPiPicoHal_a1895e9b1ac9f1e9eb6ede9944c36f66a_cgraph.dot  classPiPicoHal_a1895e9b1ac9f1e9eb6ede9944c36f66a_cgraph.map  (+1195 more)
docs/docs/: DOCS.md
docs/html/: graph_legend.html  index.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  (+127 more)
freertos/: FreeRTOSConfig.h
fsw/: CMakeLists.txt
fsw/include/: gse.h  missionmanager.h  radio.h
fsw/src/: gse.c  main.c  missionmanager.c  radio.c  taskmanager.c
main/: CMakeLists.txt  README.md
main/drivers/include/: PicoHal.h  RadioLibPiHal.h  bh1750.h  ds18b20.h  ds18b_onewire.h  eps.h  i2c.h  i2cDriver.h  ina219.h  mag.h  mag_lis3mdltr.h  max17048.h  mram.h  onewire.h  radiolibhal.h  rtc.h  rtc_ds3231.h  sdcard.h  storage.h  usb_uart.h  vega_ant.h  watchdog.h  watchdog_max706resa.h
main/drivers/src/: bh1750.c  diskio.c  ds18b20.c  ds18b_onewire.c  ds18b_onewire.cpp  eeprom.c  eps.c  hw_config.c  i2c.c  i2cDriver.c  ina219.c  mag.c  mag_lis3mdltr.c  max17048.c  mram.c  onewire.c  rtc.c  rtc_ds3231.c  sdcard.c  storage.c  usb_uart.c  vega_ant.c  watchdog.c  watchdog_max706resa.c
main/include/: EpsSensor.h  RadioLibPiHal.h  ccsds.h  command.h  eps.h  gse.h  main.h  radio.h  scheduler.h  steve.h  telemetry.h
main/libraries/include/: RadioLibPiHal.h  ccsds.h  log.h  mag.h  rtc.h  sdcardinterface.h  watchdog.h
main/libraries/src/: ccsds.c  eps.c  hw_config.c  log.c  mag.c  rtc.c  sdcardinterface.c  watchdog.c
main/simulator/drivers/include/: max17048.h  onewire_library.h
main/simulator/drivers/include.h/: diskio.h
main/simulator/drivers/src/: diskio.c  usb_uart.c
main/simulator/pico-sdk/hardware/: clocks.h  gpio.h  i2c.h  irq.h  pio.h  pwm.h  spi.h  uart.h
main/simulator/pico-sdk/pico/: stdio.h  stdio_usb.h  stdlib.h
main/simulator/pico-sdk/pico/stdio/: driver.h
main/simulator/tasks/radio/: radio.h
main/src/: EpsSensor.c  ccsds.c  command.c  gse.c  log.c  main.c  missionmanager.c  radio.c  radio.cpp  scheduler.c  steve.c  telemetry.c
main/tasks/command/: command.c  command.h
main/tasks/file-downlink/: file_downlink.c  file_downlink.h  file_downlink_codes.h
main/tasks/filesystem/: filesystem.c  filesystem.h  filesystem_errors.h
main/tasks/ftp/: ftp.c  ftp.h
main/tasks/gse/: gse.c  gse.h
main/tasks/include/: command.h  gse.h  main.h  radio.h  steve.h  telemetry.h
main/tasks/main/: main.c  main.h
main/tasks/radio/: radio.cpp  radio.h
main/tasks/src/: command.c  gse.c  main.c  radio.cpp  steve.c  telemetry.c
main/tasks/steve/: README.md  steve.c  steve.h
main/tasks/steve/jobs/: antenna_deploy_job.c  antenna_deploy_job.h  build_id_job.c  build_id_job.h  heartbeat_job.c  heartbeat_job.h  hello_job.c  hello_job.h  miscallaneous_jobs.c  miscellaneous_jobs.c  miscellaneous_jobs.h  set_rtc_job.c  set_rtc_job.h  simple_downlink_job.c  simple_downlink_job.h
main/tasks/telemetry/: telemetry.c  telemetry.h
main/tasks/watchdog/: watchdog.c  watchdog.h
main/test/: README.md
main/test/fuzz/: CMakeLists.txt  command.dict  command.proto  command_fuzzer.cpp  command_proto_mutator.cpp  fuzz.sh  minimize.sh  repro.sh  test_proto_creator.cpp  triage.sh
main/test/fuzz/corpus/: change_heartbeat_telem_rate  change_heartbeat_telem_rate copy  empty  telem_rate_apid1
main/test/fuzz/mutator/: CMakeLists.txt  command.proto  command_proto_mutator.cpp  mutator.cpp
main/test/unit/: CMakeLists.txt  create_test.cmake  project.yml
main/test/unit/filesystem/: CMakeLists.txt  filesystem_test_unittest.c
main/test/unit/heartbeat/: CMakeLists.txt  heart_beat_test.c
main/test/unit/log/: CMakeLists.txt  log_test_unittest.c
main/test/unit/steve/: CMakeLists.txt  steve_test_unittest.c
main/test/unit/utilities/: log.c
main/testing/: ccsds_cmd.py  ccsds_telem.py
main/utilities/include/: ccsds.h  ftp.h  hb_tlm_log.h  log.h  state.h  timing.h  user_auth.h
main/utilities/src/: ftp.c  hb_tlm_log.c  log.c  timing.c  user_auth.c
scripts/: ccsds_cmd.py  ccsds_telem.py
(+355 files in other folders)
